# c--cmake-exe-template

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: function.hpp
tests/: CMakeLists.txt
tests/simple_failing_test/: CMakeLists.txt  simple_failing_test.cpp
tests/simple_test/: CMakeLists.txt  simple_test.cpp
